# cmake-protobuf-example

./: CMakeLists.txt
proto/: CMakeLists.txt
